config/k8s/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: staging-env
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mysql
  template:
    metadata:
      labels:
        component: mysql
    spec:
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
              subPath: mysql
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: rails6
  name: rails6-deployment
  namespace: staging-env
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rails6
  template:
    metadata:
      labels:
        app: rails6
    spec:
      containers:
      - image: eu.gcr.io/cloud-run-238617/rails6:master
        name: rails6
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /status
            port: 3000
          initialDelaySeconds: 5
          timeoutSeconds: 30
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rails6-job
  namespace: staging-env
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails6-job
  template:
    metadata:
      labels:
        app: rails6-job
    spec:
      containers:
      - image: eu.gcr.io/cloud-run-238617/rails6:master
        name: rails6-job
        command: ["bundle", "exec", "rails", "jobs:work"]
