config/k8s/services.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-cluster-ip-service
  namespace: staging-env
spec:
  type: ClusterIP
  selector:
    component: mysql
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: staging-env
  labels:
    app: web-deployment
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: web
